--- a/public/style.css
+++ b/public/style.css
@@ -470,6 +470,69 @@ th {
   box-sizing: border-box;
 }
 
+html,
+body {
+  min-height: 100%;
+}
+
 html {
+  height: 100%;
   font-family: Helvetica Neue, Helvetica, sans-serif;
+}
+
+body {
+  border: 8px solid #494C4E;
+  margin: 0;
+}
+
+.container {
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+.container--lg {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.header {
+  display: flex;
+  padding: 30px 0;
+}
+
+.header-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  border: 4px solid grey;
+  color: gray;
+  text-decoration: none;
+  text-align: center;
+}
+
+.header-nav {
+  display: flex;
+  flex: auto;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.header-navlinks {
+  display: flex;
+  margin: 0;
+  list-style: none;
+  padding: 0;
+}
+
+/* Select last nav element and add no margin */
+
+.header-navlinks li:last-of-type .header-navlink {
+  margin-right: 0;
+}
+
+.header-navlink {
+  margin-right: 5px;
 }
