--- a/public/style.css
+++ b/public/style.css
@@ -486,6 +486,8 @@ body {
 }
 
 .container {
+  padding-right: 20px;
+  padding-left: 20px;
   max-width: 768px;
   margin: 0 auto;
 }
@@ -497,7 +499,8 @@ body {
 
 .header {
   display: flex;
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .header-logo {
