--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,99 +1,10 @@
 @import "~normalize.css/normalize.css";
-* {
-  box-sizing: border-box;
-}
 
-html,
-body {
-  min-height: 100%;
-}
-
-html {
-  height: 100%;
-  font-family: Helvetica Neue, Helvetica, sans-serif;
-}
-
-body {
-  border: 8px solid #494C4E;
-  margin: 0;
-}
-
-img {
-  width: auto;
-  max-width: 100%;
-}
-
-figure {
-  margin: 0;
-}
-
-.container {
-  padding-right: 20px;
-  padding-left: 20px;
-  max-width: 768px;
-  margin: 0 auto;
-}
-
-.container--lg {
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-.u-multiLineText {
-  white-space: pre-line;
-}
-
-.header {
-  display: flex;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.header-logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  padding: 5px;
-  border: 4px solid grey;
-  color: gray;
-  text-decoration: none;
-  text-align: center;
-}
-
-.header-nav {
-  display: flex;
-  flex: auto;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.header-navlinks {
-  display: flex;
-  margin: 0;
-  list-style: none;
-  padding: 0;
-}
-
-// Select last nav element and add no margin
-.header-navlinks li:last-of-type .header-navlink {
-  margin-right: 0;
-}
-
-.header-navlink {
-  margin-right: 5px;
-}
-
-.header-navlink.active {
-  color: red;
-}
-
-// Project
-.project {}
-
-.project-title {}
-
-.project-backlink {}
-
-.project-date {}
+@import "./_variables";
+@import "./_base";
+@import "./_layout";
+@import "./_helpers";
+@import "./components/header";
+@import "./components/footer";
+@import "./components/buttons";
+@import "./components/landing";
