--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -8,11 +8,16 @@
   flex: 1;
 }
 
+.hero {
+  margin-bottom: 40px;
+}
+
 .container {
   max-width: 768px;
   padding-right: 20px;
   padding-left: 20px;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container--lg {
