DRY up index and show view markup and styling by creating a reusable components, add additional styling

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -8,3 +8,5 @@
 @import "./components/footer";
 @import "./components/buttons";
 @import "./components/landing";
+@import "./components/indexPages";
+@import "./components/showPages";
