Add Show pages external link styling

--- a/scss/components/_showPages.scss
+++ b/scss/components/_showPages.scss
@@ -26,6 +26,16 @@
   text-transform: uppercase;
 }
 
+.show-externalLink {
+  text-decoration: none;
+}
+
+.show-externalLinkIcon {
+  top: -2px;
+  position: relative;
+  font-size: 12px;
+}
+
 .show-imageContainer {
 
 }
