--- a/scss/components/_landing.scss
+++ b/scss/components/_landing.scss
@@ -1,3 +1,11 @@
+.landing-title {
+  line-height: 1.4;
+
+  @media (max-width: 768px) {
+    font-size: 24px;
+  }
+}
+
 .landing-experienceLinks {
   padding: 0 10px;
   margin: 0 20px;
@@ -5,5 +13,5 @@
 }
 
 .landing-experienceLink {
-  margin: 0 10px;
+  margin: 0 10px 10px;
 }
