--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,13 +1,11 @@
 // Colors
-$primary: #fda469;
-$secondary: #f4cf8d;
+$brand-color: #ff8061;
+$accent-color: #fdcb6e;
 
-$grey-8: #888;
-$grey-6: #666;
-$grey-4: #444;
+$color-body-copy: #444;
+$color-subtitle: #888;
+$color-nav-item: #b2bec3;
+$color-nav-item-hover: #636e72;
 
 // Fonts
 $font: lato, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
-$fontColor: $primary;
-$fontBodyCopy: $font;
-$fontBodyCopyColor: #444;
