--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -12,8 +12,8 @@
   width: 50px;
   height: 50px;
   padding: 5px;
-  border: 4px solid $primary;
-  color: $primary;
+  border: 4px solid $brand-color;
+  color: $brand-color;
   text-decoration: none;
   text-align: center;
 }
@@ -40,18 +40,18 @@
 .header-navlink {
   margin-right: 10px;
   text-decoration: none;
-  color: $grey-8;
+  color: $color-nav-item;
   font-weight: bold;
   transition: 100ms ease all;
 
   &.active {
-    color: $primary;
+    color: $brand-color;
     &:hover {
-      color: $primary;
+      color: $brand-color;
     }
   }
   &:hover {
-    color: $grey-6;
+    color: $color-nav-item-hover;
   }
 }
 
