Update links to remove underline and to handle :active state

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -42,8 +42,10 @@ p {
 
 a {
   color: $brand-color;
+  text-decoration: none;
   transition: 100ms ease all;
 
+  &:active,
   &:hover {
     color: darken($brand-color, 10%);
   }
