--- a/scss/components/_landing.scss
+++ b/scss/components/_landing.scss
@@ -6,12 +6,16 @@
   }
 }
 
+.landing-section {
+  margin-bottom: 30px;
+}
+
 .landing-experienceLinks {
   padding: 0 10px;
-  margin: 0 20px;
+  margin: 30px 20px 0;
   text-align: center;
 }
 
 .landing-experienceLink {
-  margin: 0 10px 10px;
+  margin: 0 20px 10px;
 }
