--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -36,6 +36,24 @@ h1, h2, h3, h4 {
   color: $brand-color;
 }
 
+h1 {
+  @media (max-width: 768px) {
+    font-size: 24px;
+  }
+}
+
+h2 {
+  @media (max-width: 768px) {
+    font-size: 22px;
+  }
+}
+
+h3 {
+  @media (max-width: 768px) {
+    font-size: 20px;
+  }
+}
+
 p {
   line-height: 1.6;
 }
