--- a/scss/components/_showPages.scss
+++ b/scss/components/_showPages.scss
@@ -1,16 +1,26 @@
-.show-page {
-
-}
+.show-page {}
 
 .show-backLink {
   text-decoration: none;
+  font-size: 16px;
+  @media (max-width: 768px) {
+    font-size: 12px;
+  }
+}
+
+.show-backLinkIcon {
+  position: relative;
+  vertical-align: top;
+  top: 2px;
+  @media (max-width: 768px) {
+    top: 1px;
+  }
 }
 
 .show-backLinkText {
   display: inline-block;
   padding-top: 1px;
   padding-left: 3px;
-  font-size: 16px;
   vertical-align: top;
   text-transform: uppercase;
 }
@@ -36,10 +46,6 @@
   font-size: 12px;
 }
 
-.show-imageContainer {
+.show-imageContainer {}
 
-}
-
-.show-image {
-
-}
+.show-image {}
