--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,4 +8,4 @@ $color-nav-item: #b2bec3;
 $color-nav-item-hover: #636e72;
 
 // Fonts
-$font: lato, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
+$font: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue", sans-serif;
