--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,4 +8,4 @@ $color-nav-item: #b2bec3;
 $color-nav-item-hover: #636e72;
 
 // Fonts
-$font: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue", sans-serif;
+$font: "Lato", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
