Add contact form to work with Netlify

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -1,3 +1,11 @@
+.u-hidden {
+  display: none;
+}
+
+.u-visuallyHidden {
+  visibility: hidden;
+}
+
 .u-multiLineText {
   white-space: pre-line;
 }
