--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,16 @@ $color-body-copy: #444;
 $color-subtitle: #888;
 $color-nav-item: #b2bec3;
 $color-nav-item-hover: #636e72;
+$color-subheader: #516071;
 
 // Fonts
 $font: "Lato", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+
+// ***************
+// BULMA OVERRIDES
+// ***************
+
+$grey-darker: $color-body-copy;
+
+$link: $accent-color;
+$label-color: $color-subheader;
