--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,12 +1,19 @@
+button:disabled {
+  opacity: 0.5;
+  cursor: default;
+}
+
 .btn {
   display: inline-block;
   padding: 10px 20px;
+  border: 0;
   font-family: $font;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: .3px;
   font-weight: bolder;
   transition: all 200ms ease;
+  cursor: pointer;
 }
 
 .btn-sm {
